# PHCCO_BooleanClass

./: README.md  ising.ipynb  ising.py  pyproject.toml
IsingResults/DASI/: DASI_STG_async.csv  DASI_STG_sync.csv  DASI_async.csv  DASI_sync.csv
IsingResults/TS/: TS_STG_async.csv  TS_STG_sync.csv  TS_async.csv  TS_sync.csv
IsingResults/TSSA/: TSSA_STG_async.csv  TSSA_STG_sync.csv  TSSA_async.csv  TSSA_sync.csv
IsingResults/TSSI/: TSSI_STG_async.csv  TSSI_STG_sync.csv  TSSI_async.csv  TSSI_sync.csv
IsingResults/TT/: TT_STG_async.csv  TT_STG_sync.csv  TT_async.csv  TT_sync.csv
IsingResults/TTSA/: TTSA_STG_async.csv  TTSA_STG_sync.csv  TTSA_async.csv  TTSA_sync.csv
